# ai-betting-system

./: .env.example  .gitignore  Dockerfile  Procfile  __init__.py  docker-compose.yml  final_phase1_tests.txt  main.py  out.txt  out2.txt  phase2_tests.txt  phase3_tests.txt  phase4_tests.txt  pyproject.toml  pyrightconfig.json  pytest_bot.txt  pytest_out.txt  pytest_out_2.txt  pytest_out_3.txt  pytest_out_4.txt  pytest_start.txt  pytest_today.txt  requirements.txt  run_local.py  setup.cfg  setup_local.bat  validate_edge.py  vercel.json
alembic/: env.py
automation/: __init__.py  adaptive_identity_engine.py  aggression_controller.py  alpha_detector.py  base_subsystem.py  causal_layer.py  clv_tracker.py  event_bus.py  execution_engine.py  jump_aware_engine.py  lag_detector.py  news_monitor.py  notifications.py  obfuscation_engine.py  protection.py  report_generator.py  run_bot.py  signal_auditor.py  state_manager.py  telegram_bot.py  truth_layer.py  user_manager.py  walk_forward.py  weather_service.py  workflows.py  xg_processor.py
backend/: analytics.py  app.py  auth.py  cache.py  config.py  database.py  db_init.py  models.py  schemas.py  utils.py
backtest/: backtest_results.csv  clv_analyzer.py  data_loader.py  metrics.py  model_runner.py  run_backtest.py  signal_audit.csv  simulator.py
dashboard/: package-lock.json  package.json  vercel.json
data/: causal.db  events.db  truth.db
db/: schema.sql
docs/: README.md
experiments/: ab_test_calibration.py  competitive_simulation.py  config.py  execution_survivability.py  final_edge_audit.py  market_efficiency.py  (+4 more)
(+93 files in other folders)
