[metadata]
name = ai-betting-system

[options]
packages = find:
install_requires =
    loguru
    sqlalchemy
    pydantic-settings
    httpx
    apscheduler
    tenacity
    python-telegram-bot
    pytest
    pytest-asyncio
    playwright
    fake-useragent
    python-dateutil
    pytz
    understatapi
    
[options.packages.find]
exclude =
    tests*
